--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.15.7",
     "@mui/x-data-grid": "^6.19.3",
     "react": "^18.2.0",
@@ -19,7 +21,8 @@
     "react-query": "^3.39.3",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
-    "recharts": "^2.11.0"
+    "recharts": "^2.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
