--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.15.7",
     "@mui/x-data-grid": "^6.19.3",
+    "@syncfusion/ej2-react-spreadsheet": "^24.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
+    "react-virtuoso": "^4.6.3",
     "recharts": "^2.11.0",
     "xlsx": "^0.18.5"
   },
