--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/x-data-grid": "^6.19.3",
     "@syncfusion/ej2-react-spreadsheet": "^24.2.4",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
