--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@mui/material": "^5.15.7",
+    "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.3",
     "@syncfusion/ej2-react-spreadsheet": "^24.2.4",
+    "driver.js": "^1.3.1",
+    "lottie-react": "^2.4.0",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
