--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
+    "react-spinners": "^0.13.8",
     "react-virtuoso": "^4.6.3",
     "recharts": "^2.11.0",
     "xlsx": "^0.18.5"
